Fixed the display character overflow issue.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,7 +107,8 @@ body {
         box-shadow: 1px 1px 2px rgba(40, 44, 45, 0.3), -1px -1px 2px rgba(32, 36, 37, 0.5), inset -5px 5px 10px rgba(32, 36, 37, 0.2), inset 5px -5px 10px rgba(32, 36, 37, 0.2), inset -5px -5px 10px rgba(40, 44, 45, 0.9), inset 5px 5px 13px rgba(32, 36, 37, 0.9);
         padding: 1.5rem;
         grid-column: 1 / -1;
-        word-wrap: break-word;        
+        word-wrap: break-word;   
+        word-break: break-word;     
 
 
         .operation {
